增加关于部署遇到问题的内容

--- a/Report/5112Report_Group7.tex
+++ b/Report/5112Report_Group7.tex
@@ -176,122 +176,41 @@ Recent trends indicate a move towards more efficient and multimodal models, but 
 
 % Task 2.2
 \subsection{Local LLM Platform Implementation}
-% 本地LLM平台实现
 
-This subsection presents the implementation of a local dialogue system utilizing the open-source LLM \texttt{Llama-3.2-3B-Instruct-Q4\_K\_M.gguf}. The system is designed to facilitate offline, privacy-preserving conversations while maintaining performance efficiency across different hardware configurations.
-% 本小节介绍了利用开源LLM \texttt{Llama-3.2-3B-Instruct-Q4\_K\_M.gguf} 实现的本地对话系统。该系统旨在促进离线、保护隐私的对话，同时在不同硬件配置上保持性能效率。
+We deploy a compact local dialogue stack around the quantized \texttt{Llama-3.2-3B-Instruct-Q4\_K\_M.gguf} checkpoint to provide offline interaction without sacrificing responsiveness.
+% 部署基于量化 Llama-3.2-3B-Instruct-Q4_K_M.gguf 的轻量本地对话栈，实现离线交互并保持响应速度
 
-\subsubsection{System Architecture}
-% 系统架构
+\noindent\textbf{Architecture.} \texttt{llm\_platform.py} wraps \texttt{llama-cpp-python} for model loading and inference, while \texttt{dialogue\_system.py} manages the chat loop, prompt templating, streaming output, and defensive error handling. The separation keeps model plumbing isolated from user interaction logic.
+% 架构层面将模型加载推理与对话管理解耦，llm_platform.py 负责底层推理，dialogue_system.py 负责交互与容错
 
-The local LLM platform consists of two main Python modules: \texttt{llm\_platform.py} and \texttt{dialogue\_system.py}. The architecture follows a modular design approach, separating concerns between model inference and dialogue management to ensure maintainability and extensibility.
-% 本地LLM平台由两个主要Python模块组成：\texttt{llm\_platform.py} 和 \texttt{dialogue\_system.py}。该架构采用模块化设计方法，将模型推理与对话管理分离，以确保可维护性和可扩展性。
+\noindent\textbf{Inference pipeline.} Configuration values expose only the essentials: a 4,096-token context window, generation controls (temperature and maximum new tokens), and an optional GPU layer count for acceleration. Switching between CPU and CUDA execution is done in \texttt{config.json} without touching the code base.
+% 推理流程仅暴露上下文长度、采样控制和 GPU 层数等核心参数，可在 config.json 中无缝切换 CPU/GPU
 
-\begin{itemize}
-    \item \textbf{LLM Platform Module} (\texttt{llm\_platform.py}): Handles model loading, initialization, and inference operations using the \texttt{llama-cpp-python} library. This module abstracts the underlying model complexities and provides a clean interface for text generation.
-    % \textbf{LLM平台模块}：处理使用 \texttt{llama-cpp-python} 库的模型加载、初始化和推理操作。该模块抽象了底层模型的复杂性，并为文本生成提供了清洁的接口。
-    
-    \item \textbf{Dialogue System Module} (\texttt{dialogue\_system.py}): Manages conversational flow, maintains dialogue history, handles user input/output, and provides conversation persistence functionality.
-    % \textbf{对话系统模块}：管理对话流程、维护对话历史、处理用户输入/输出，并提供对话持久化功能。
-\end{itemize}
+\noindent\textbf{User experience and persistence.} The terminal interface streams tokens as they are produced, retains up to six dialogue turns, supports maintenance commands (\texttt{exit}/\texttt{clear}/\texttt{stats}), and records each session as ISO8601-stamped JSON under \texttt{conversations/} for later auditing.
+% 终端界面支持流式输出、保留最多六轮上下文，提供退出/清除/统计命令，并以 ISO8601 时间戳保存会话记录
 
-\subsubsection{Implementation Details}
-% 实现细节
-
-\paragraph{Model Configuration}
-% 模型配置
-The system utilizes the quantized Llama-3.2-3B-Instruct model with Q4\_K\_M quantization to optimize memory usage while maintaining reasonable inference quality. Key configuration parameters include:
-% 系统利用Q4\_K\_M量化的Llama-3.2-3B-Instruct模型，以优化内存使用，同时保持合理的推理质量。关键配置参数包括：
-
-\begin{itemize}
-    \item Context window (\texttt{n\_ctx}): 4096 tokens for extended conversations
-    % 上下文窗口：4096个token用于扩展对话
-    \item GPU layers (\texttt{n\_gpu\_layers}): Configurable based on available hardware
-    % GPU层数：根据可用硬件配置
-    \item Temperature: 0.7 for balanced creativity and consistency
-    % 温度：0.7以平衡创造性和一致性
-    \item Maximum tokens: 512 per response to control output length
-    % 最大token数：每个响应512个token以控制输出长度
-\end{itemize}
-
-\paragraph{Conversation Management}
-% 对话管理
-The dialogue system implements several key features to enhance user experience:
-% 对话系统实现了几个关键功能来增强用户体验：
-
-\begin{enumerate}
-    \item \textbf{Multi-turn History}: Maintains conversation context by preserving up to 6 previous exchanges, ensuring coherent dialogue flow.
-    % \textbf{多轮历史}：通过保留多达6次先前交流来维护对话上下文，确保连贯的对话流程。
-    
-    \item \textbf{Role-based Formatting}: Structures conversations using system, user, and assistant roles following the Llama instruction format.
-    % \textbf{基于角色的格式化}：使用系统、用户和助手角色按照Llama指令格式构建对话。
-    
-    \item \textbf{Streaming Output}: Provides real-time response generation to improve perceived responsiveness.
-    % \textbf{流式输出}：提供实时响应生成以提高感知响应性。
-    
-    \item \textbf{Command Interface}: Supports special commands for conversation management (exit, clear, statistics).
-    % \textbf{命令接口}：支持对话管理的特殊命令（退出、清除、统计）。
-\end{enumerate}
-
-\paragraph{Data Persistence}
-% 数据持久化
-All conversations are automatically saved in JSON format with ISO8601 timestamps in the \texttt{conversations/} directory. This enables:
-% 所有对话都会自动以JSON格式保存，并在 \texttt{conversations/} 目录中使用ISO8601时间戳。这使得：
-
-\begin{itemize}
-    \item Conversation history review and analysis
-    % 对话历史回顾和分析
-    \item Future model evaluation and fine-tuning dataset creation
-    % 未来模型评估和微调数据集创建
-    \item Reproducible experiment tracking
-    % 可重现的实验跟踪
-\end{itemize}
-
-\subsubsection{Hardware Optimization}
-% 硬件优化
-
-The platform supports both CPU and GPU inference modes to accommodate different hardware configurations:
-% 该平台支持CPU和GPU推理模式，以适应不同的硬件配置：
-
-\begin{itemize}
-    \item \textbf{CPU Mode}: Utilizes multi-threading (\texttt{n\_threads=8}) for parallel processing of model computations
-    % \textbf{CPU模式}：利用多线程进行模型计算的并行处理
-    \item \textbf{GPU Mode}: Leverages CUDA acceleration through cuBLAS integration for significantly improved inference speed
-    % \textbf{GPU模式}：通过cuBLAS集成利用CUDA加速，显著提高推理速度
-\end{itemize}
-
-The configuration file (\texttt{config.json}) allows easy switching between deployment modes without code modification, facilitating testing and deployment across different environments.
-% 配置文件允许在不修改代码的情况下轻松切换部署模式，便于在不同环境中进行测试和部署。
+\noindent\textbf{Portability.} The same stack runs on laptops or desktop GPUs, making it suitable for privacy-sensitive deployments and quick benchmarking. Figure~\ref{fig:llama_cpu_chat} illustrates the interface operating in CPU mode.
+% 该方案可在笔记本或桌面 GPU 上部署，兼顾隐私场景与快速评测，图~\ref{fig:llama_cpu_chat} 展示其 CPU 模式界面
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.95\linewidth]{Figures/llama对话.png}
     \caption{Terminal-based dialogue interface showing multi-turn conversation capabilities}
-    % 终端对话界面展示多轮对话能力
     \label{fig:llama_cpu_chat}
 \end{figure}
 
-\subsubsection{System Evaluation}
-% 系统评估
 
-The implemented system successfully fulfills the project requirements by providing:
-% 实现的系统通过提供以下功能成功满足项目要求：
+\subsubsection{Challenges with Llama 3.1 8B Deployment}
 
-\begin{itemize}
-    \item A fully functional terminal-based dialogue interface supporting multi-turn conversations
-    % 功能齐全的终端对话界面，支持多轮对话
-    \item Offline operation ensuring privacy and data security
-    % 离线操作确保隐私和数据安全
-    \item Configurable parameters for different use cases and hardware capabilities
-    % 针对不同用例和硬件功能的可配置参数
-    \item Robust error handling and graceful degradation
-    % 强大的错误处理和优雅降级
-    \item Extensible architecture for future enhancements
-    % 可扩展架构以便未来增强
-\end{itemize}
+While experimenting with the full-size Llama-3.1-8B-Instruct checkpoint, we encountered practical constraints on the RTX 5080 (16 GiB). Model weights alone consumed roughly 15.4 GiB in FP16, leaving little headroom for KV caches and activations. Consequently, the system frequently raised CUDA out-of-memory errors even before completing a single response.
+% 在 RTX 5080（16 GiB）上加载 Llama-3.1-8B Instruct 时，FP16 权重占用约 15.4 GiB 显存，几乎没有空间留给 KV 缓存与中间激活，导致推理尚未完成就频繁触发 CUDA OOM。
 
-The system demonstrates practical applicability in scenarios requiring private, local LLM deployment while maintaining reasonable performance and user experience standards.
-% 该系统在需要私有、本地LLM部署的场景中展现了实用性，同时保持了合理的性能和用户体验标准。
+We mitigated the tokenizer crash by forcing \texttt{TOKENIZERS\_PARALLELISM=false} and limiting \texttt{RAYON\_NUM\_THREADS}. However, memory pressure remained the dominant bottleneck. Even aggressive limits on \texttt{max\_new\_tokens} and history length provided only marginal relief, so conversations still terminated abruptly once GPU memory fragmented.
+% 通过设置 TOKENIZERS_PARALLELISM=false 和 RAYON_NUM_THREADS 等环境变量，解决了分词线程池崩溃问题，但显存压力仍是主要瓶颈；即便收紧 max_new_tokens 与历史长度，OOM 依旧发生。
+
+Given the strict memory ceiling and unstable experience, we migrated the local deployment to the quantized Llama-3.2-3B-Instruct-Q4\_K\_M model. It delivers comparable interaction quality while fitting comfortably within both GPU and CPU budgets.
+% 鉴于显存限制和交互不稳定，我们最终采用量化的 Llama-3.2-3B-Instruct-Q4_K_M 替代方案，在 GPU 与 CPU 环境下都能稳定运行并保持近似的对话质量。
+
 
 \subsection{Performance Comparison: CPU vs GPU Deployment}
 % 性能比较：CPU 与 GPU 部署
