--- a/Report/5112Report_Group7.tex
+++ b/Report/5112Report_Group7.tex
@@ -200,16 +200,7 @@ We deploy a compact local dialogue stack around the quantized \texttt{Llama-3.2-
 \end{figure}
 
 
-\subsubsection{Challenges with Llama 3.1 8B Deployment}
 
-While experimenting with the full-size Llama-3.1-8B-Instruct checkpoint, we encountered practical constraints on the RTX 5080 (16 GiB). Model weights alone consumed roughly 15.4 GiB in FP16, leaving little headroom for KV caches and activations. Consequently, the system frequently raised CUDA out-of-memory errors even before completing a single response.
-% 在 RTX 5080（16 GiB）上加载 Llama-3.1-8B Instruct 时，FP16 权重占用约 15.4 GiB 显存，几乎没有空间留给 KV 缓存与中间激活，导致推理尚未完成就频繁触发 CUDA OOM。
-
-We mitigated the tokenizer crash by forcing \texttt{TOKENIZERS\_PARALLELISM=false} and limiting \texttt{RAYON\_NUM\_THREADS}. However, memory pressure remained the dominant bottleneck. Even aggressive limits on \texttt{max\_new\_tokens} and history length provided only marginal relief, so conversations still terminated abruptly once GPU memory fragmented.
-% 通过设置 TOKENIZERS_PARALLELISM=false 和 RAYON_NUM_THREADS 等环境变量，解决了分词线程池崩溃问题，但显存压力仍是主要瓶颈；即便收紧 max_new_tokens 与历史长度，OOM 依旧发生。
-
-Given the strict memory ceiling and unstable experience, we migrated the local deployment to the quantized Llama-3.2-3B-Instruct-Q4\_K\_M model. It delivers comparable interaction quality while fitting comfortably within both GPU and CPU budgets.
-% 鉴于显存限制和交互不稳定，我们最终采用量化的 Llama-3.2-3B-Instruct-Q4_K_M 替代方案，在 GPU 与 CPU 环境下都能稳定运行并保持近似的对话质量。
 
 
 \subsection{Performance Comparison: CPU vs GPU Deployment}
@@ -250,6 +241,18 @@ Figure~\ref{fig:llama_cpu_chat} shows the slower CPU baseline, while Figure~\ref
 
 \subsection{Comparation of Different Pretrained Models}
 % 不同预训练模型的比较
+
+\subsection{Challenges in Deployment}
+
+While experimenting with the full-size Llama-3.1-8B-Instruct checkpoint, we encountered practical constraints on the RTX 5080 (16 GiB). Model weights alone consumed roughly 15.4 GiB in FP16, leaving little headroom for KV caches and activations. Consequently, the system frequently raised CUDA out-of-memory errors even before completing a single response.
+% 在 RTX 5080（16 GiB）上加载 Llama-3.1-8B Instruct 时，FP16 权重占用约 15.4 GiB 显存，几乎没有空间留给 KV 缓存与中间激活，导致推理尚未完成就频繁触发 CUDA OOM。
+
+We mitigated the tokenizer crash by forcing \texttt{TOKENIZERS\_PARALLELISM=false} and limiting \texttt{RAYON\_NUM\_THREADS}. However, memory pressure remained the dominant bottleneck. Even aggressive limits on \texttt{max\_new\_tokens} and history length provided only marginal relief, so conversations still terminated abruptly once GPU memory fragmented.
+% 通过设置 TOKENIZERS_PARALLELISM=false 和 RAYON_NUM_THREADS 等环境变量，解决了分词线程池崩溃问题，但显存压力仍是主要瓶颈；即便收紧 max_new_tokens 与历史长度，OOM 依旧发生。
+
+Given the strict memory ceiling and unstable experience, we migrated the local deployment to the quantized Llama-3.2-3B-Instruct-Q4\_K\_M model. It delivers comparable interaction quality while fitting comfortably within both GPU and CPU budgets.
+% 鉴于显存限制和交互不稳定，我们最终采用量化的 Llama-3.2-3B-Instruct-Q4_K_M 替代方案，在 GPU 与 CPU 环境下都能稳定运行并保持近似的对话质量。
+
 
 % Task3
 \section{Task 3: LLM Performance Evaluation}
