--- a/Report/5112Report_Group7.tex
+++ b/Report/5112Report_Group7.tex
@@ -24,6 +24,9 @@
 % Float包：浮动环境
 \usepackage{subcaption}
 % Subcaption包：子标题
+\usepackage{tikz}
+% TikZ包：绘制图形
+\usetikzlibrary{shapes,arrows,positioning,fit,backgrounds}
 
 
 % 设置页面格式：1英寸边距，1.5倍行距，12点Times New Roman字体
@@ -284,59 +287,168 @@ In this task, students are required to explore and understand the fundamentals o
 \subsubsection{Response by Niu Mu}
 % 牛牧的回答
 
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}[node distance=2cm, auto]
+        % Traditional LLM
+        \node[draw, rectangle, fill=blue!20, text width=2.5cm, align=center] (input1) {Text Input (Tokens)};
+        \node[draw, rectangle, fill=green!20, text width=2.5cm, align=center, below of=input1] (llm) {Traditional LLM (Transformer)};
+        \node[draw, rectangle, fill=orange!20, text width=2.5cm, align=center, below of=llm] (output1) {Text Output};
+        
+        % Arrows for Traditional LLM
+        \draw[->] (input1) -- (llm);
+        \draw[->] (llm) -- (output1);
+        
+        % MLLM
+        \node[draw, rectangle, fill=blue!20, text width=2cm, align=center, right=4cm of input1] (text) {Text};
+        \node[draw, rectangle, fill=red!20, text width=2cm, align=center, right of=text] (image) {Image};
+        \node[draw, rectangle, fill=purple!20, text width=2cm, align=center, right of=image] (audio) {Audio};
+        
+        \node[draw, rectangle, fill=green!20, text width=4cm, align=center, below=1.5cm of image] (mllm) {Multimodal LLM (Vision + Language + Audio)};
+        
+        \node[draw, rectangle, fill=orange!20, text width=2cm, align=center, below=1cm of mllm, xshift=-1.5cm] (textout) {Text};
+        \node[draw, rectangle, fill=orange!20, text width=2cm, align=center, right of=textout] (imageout) {Image};
+        \node[draw, rectangle, fill=orange!20, text width=2cm, align=center, right of=imageout] (audioout) {Audio};
+        
+        % Arrows for MLLM
+        \draw[->] (text) -- (mllm);
+        \draw[->] (image) -- (mllm);
+        \draw[->] (audio) -- (mllm);
+        \draw[->] (mllm) -- (textout);
+        \draw[->] (mllm) -- (imageout);
+        \draw[->] (mllm) -- (audioout);
+        
+        % Labels
+        \node[above=0.3cm of input1, font=\bfseries] {Traditional LLM};
+        \node[above=0.3cm of image, font=\bfseries] {Multimodal LLM};
+    \end{tikzpicture}
+    \caption{Architectural comparison between traditional LLMs and MLLMs showing modality integration}
+    \label{fig:llm_mllm_arch_niu}
+\end{figure}
+
 \textbf{Architectural and Processing Differences}
 
-The fundamental distinction between MLLMs and traditional LLMs lies in their input processing capabilities. Traditional LLMs like GPT-3 and BERT are designed exclusively for text-based inputs, processing sequential token embeddings through transformer architectures and excelling at natural language tasks within the textual domain.
+Traditional LLMs like GPT-3 and BERT process only text-based inputs through transformer architectures, excelling at natural language tasks within the textual domain. MLLMs integrate multiple modalities (vision, text, audio) using: (1) modality-specific encoders, (2) cross-modal alignment mechanisms, and (3) language model decoders, enabling simultaneous understanding across different modalities.
 
-MLLMs integrate multiple modalities—vision, text, and audio—into a unified framework. The architecture consists of: (1) modality-specific encoders (e.g., Vision Transformer for images), (2) cross-modal alignment mechanisms, and (3) language model decoders. This enables understanding and generation across different modalities simultaneously.
+\textbf{Training and Applications}
 
-\textbf{Training and Data Requirements}
+Traditional LLMs use self-supervised learning on text corpora with next-token prediction, limiting understanding to linguistic patterns. MLLMs require multi-stage training on multimodal datasets (image-text pairs, video-text combinations), significantly increasing computational requirements.
 
-Traditional LLMs use self-supervised learning on large text corpora with objectives like masked language modeling or next-token prediction. Training data consists entirely of textual sequences, limiting understanding to linguistic patterns.
-
-MLLMs require complex multi-stage training: (1) pre-training on multimodal datasets for cross-modal representations, (2) instruction tuning with multimodal data, and (3) task-specific fine-tuning. This involves image-text pairs, video-text combinations, and cross-modal associations, significantly increasing computational requirements and data collection challenges.
-
-\textbf{Applications and Trade-offs}
-
-Traditional LLMs excel in text-centric applications like content generation, translation, and code completion but cannot process visual information, limiting real-world applicability.
-
-MLLMs expand capabilities to visual question answering, image captioning, multimodal dialogue systems, and cross-modal content creation. However, this versatility comes with increased model complexity, computational overhead, and potential performance trade-offs in pure text tasks compared to specialized text-only models.
+While traditional LLMs excel in text-centric applications (translation, code completion) but cannot process visual information, MLLMs expand to visual question answering, image captioning, and multimodal dialogue systems. However, this versatility comes with increased complexity and potential performance trade-offs in pure text tasks.
 
 \subsubsection{Response by Wu Zining}
 % 吴子宁的回答
 
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}[node distance=3cm]
+        % Timeline
+        \draw[thick, ->] (0,0) -- (12,0) node[right] {Time};
+        
+        % Traditional LLMs era
+        \node[draw, rectangle, fill=blue!20, text width=2.5cm, align=center, above=0.5cm] at (2,0) (bert) {BERT, GPT Text-only 2018-2020};
+        \draw[thick] (2,-0.2) -- (2,0.2);
+        
+        % Transition period
+        \node[draw, rectangle, fill=yellow!20, text width=2.5cm, align=center, above=0.5cm] at (6,0) (clip) {CLIP, DALL-E Vision-Text 2021-2022};
+        \draw[thick] (6,-0.2) -- (6,0.2);
+        
+        % MLLM era
+        \node[draw, rectangle, fill=green!20, text width=2.5cm, align=center, above=0.5cm] at (10,0) (gpt4v) {GPT-4V, LLaVA Multimodal 2023-Present};
+        \draw[thick] (10,-0.2) -- (10,0.2);
+        
+        % Arrows showing evolution
+        \draw[thick, ->] (bert.east) -- (clip.west);
+        \draw[thick, ->] (clip.east) -- (gpt4v.west);
+        
+        % Labels
+        \node[below=0.3cm] at (2,0) {2019};
+        \node[below=0.3cm] at (6,0) {2021};
+        \node[below=0.3cm] at (10,0) {2023};
+        
+        % Capability arrows
+        \draw[thick, red, ->] (1,1.5) -- (11,1.5) node[right] {Increasing Modality Support};
+    \end{tikzpicture}
+    \caption{Evolution timeline from traditional LLMs to multimodal systems}
+    \label{fig:mllm_evolution_wu}
+\end{figure}
+
 \textbf{Architectural Evolution: Single to Multiple Modalities}
 
-The evolution from traditional LLMs to MLLMs represents a paradigm shift from single-modality to integrated multimodal understanding. Traditional LLMs operate within a constrained textual universe, processing only tokenized sequences and remaining fundamentally limited to symbolic language representation. Models like GPT series excel at linguistic patterns but cannot directly understand non-textual information.
+The evolution from traditional LLMs to MLLMs represents a paradigm shift from single-modality to integrated multimodal understanding. Traditional LLMs operate within textual constraints, processing only tokenized sequences and remaining limited to symbolic language representation.
 
-MLLMs transcend this limitation by incorporating vision encoders, audio processors, and cross-modal components. A typical MLLM architecture features specialized encoders (e.g., Vision Transformer for images) that convert multimodal inputs into feature representations, followed by projection layers mapping these features into the language model's embedding space. This enables understanding of relationships between visual content and textual descriptions.
+MLLMs transcend this by incorporating vision encoders, audio processors, and cross-modal components. Typical MLLM architecture features specialized encoders (e.g., Vision Transformer) that convert multimodal inputs into feature representations, then project these features into the language model's embedding space.
 
 \textbf{Processing and Training Differences}
 
-Traditional LLMs employ straightforward tokenization and next-token prediction, learning language patterns through self-supervised objectives on text corpora. Their training data is primarily textual from web crawls, books, and articles.
-
-MLLMs require heterogeneous representation learning, processing different modalities through specialized encoders before fusion in shared representational space. Training involves multiple stages: (1) vision-language pre-training on image-text datasets, (2) multimodal instruction tuning, and (3) task-specific fine-tuning. This complexity significantly increases computational costs and requires specialized expertise in handling multiple data modalities and ensuring proper cross-modal alignment.
+Traditional LLMs employ straightforward tokenization and next-token prediction on text corpora. MLLMs require heterogeneous representation learning, processing different modalities through specialized encoders before fusion in shared representational space. Training involves: (1) vision-language pre-training, (2) multimodal instruction tuning, and (3) task-specific fine-tuning, significantly increasing computational costs and requiring specialized expertise in cross-modal alignment.
 
 \subsubsection{Response by Zhao Jinqiu}
 % 赵金秋的回答
 
+\begin{figure}[H]
+    \centering
+    \begin{tikzpicture}[node distance=1.5cm]
+        % Sequential Processing (Traditional LLM)
+        \node[font=\bfseries] at (2, 3.5) {Traditional LLM - Sequential Processing};
+        \node[draw, rectangle, fill=blue!20] (tok1) {Tokenization};
+        \node[draw, rectangle, fill=green!20, right of=tok1] (emb1) {Embedding};
+        \node[draw, rectangle, fill=yellow!20, right of=emb1] (trans1) {Transformer};
+        \node[draw, rectangle, fill=orange!20, right of=trans1] (out1) {Text Output};
+        
+        \draw[thick, ->] (tok1) -- (emb1);
+        \draw[thick, ->] (emb1) -- (trans1);
+        \draw[thick, ->] (trans1) -- (out1);
+        
+        % Parallel Processing (MLLM)
+        \node[font=\bfseries] at (3, 1) {MLLM - Parallel Multimodal Processing};
+        
+        % Input modalities
+        \node[draw, rectangle, fill=blue!20, below=3cm of tok1] (text2) {Text};
+        \node[draw, rectangle, fill=red!20, below=3cm of emb1] (img2) {Image};
+        \node[draw, rectangle, fill=purple!20, below=3cm of trans1] (aud2) {Audio};
+        
+        % Encoders
+        \node[draw, rectangle, fill=green!20, below of=text2, text width=1.5cm, align=center] (textenc) {Text Encoder};
+        \node[draw, rectangle, fill=green!20, below of=img2, text width=1.5cm, align=center] (imgenc) {Vision Encoder};
+        \node[draw, rectangle, fill=green!20, below of=aud2, text width=1.5cm, align=center] (audenc) {Audio Encoder};
+        
+        % Fusion layer
+        \node[draw, rectangle, fill=yellow!20, below=1.5cm of imgenc, text width=3cm, align=center] (fusion) {Cross-Modal Fusion Layer};
+        
+        % Outputs
+        \node[draw, rectangle, fill=orange!20, below=1cm of fusion, xshift=-2cm] (textout2) {Text};
+        \node[draw, rectangle, fill=orange!20, below=1cm of fusion] (imgout2) {Image};
+        \node[draw, rectangle, fill=orange!20, below=1cm of fusion, xshift=2cm] (audout2) {Audio};
+        
+        % Arrows
+        \draw[thick, ->] (text2) -- (textenc);
+        \draw[thick, ->] (img2) -- (imgenc);
+        \draw[thick, ->] (aud2) -- (audenc);
+        
+        \draw[thick, ->] (textenc) -- (fusion);
+        \draw[thick, ->] (imgenc) -- (fusion);
+        \draw[thick, ->] (audenc) -- (fusion);
+        
+        \draw[thick, ->] (fusion) -- (textout2);
+        \draw[thick, ->] (fusion) -- (imgout2);
+        \draw[thick, ->] (fusion) -- (audout2);
+    \end{tikzpicture}
+    \caption{Comparison of sequential processing in traditional LLMs vs. parallel multimodal processing in MLLMs}
+    \label{fig:processing_comparison_zhao}
+\end{figure}
+
 \textbf{Processing Philosophy: Unimodal vs. Multimodal Intelligence}
 
-The distinction between traditional LLMs and MLLMs can be understood through cognitive processing philosophy. Traditional LLMs embody a text-centric paradigm where all capabilities are mediated through linguistic representations. Models like GPT-3.5 and Claude process information exclusively through tokenized text sequences, excelling in language comprehension within textual confines.
+Traditional LLMs embody a text-centric paradigm where all capabilities are mediated through linguistic representations. Models like GPT-3.5 process information exclusively through tokenized text sequences, excelling in language comprehension within textual confines.
 
-MLLMs represent a shift toward embodied intelligence, integrating multiple sensory modalities similar to human cognitive processes. Models like GPT-4V and LLaVA simultaneously process text, images, and audio, enabling richer contextual understanding and more natural human-computer interaction.
+MLLMs represent a shift toward embodied intelligence, integrating multiple sensory modalities similar to human cognitive processes. Models like GPT-4V and LLaVA simultaneously process text, images, and audio, enabling richer contextual understanding.
 
-\textbf{Technical Architecture: Sequential vs. Parallel Processing}
+\textbf{Technical Architecture and Applications}
 
-Traditional LLMs employ sequential processing where tokens flow through self-attention layers and feed-forward networks. The linear pipeline follows: tokenization → embedding → transformer layers → output generation, optimized for discrete token sequences.
+Traditional LLMs employ sequential processing with linear pipeline: tokenization → embedding → transformer layers → output generation. MLLMs implement parallel modality processing with: (1) modality-specific encoders, (2) cross-modal attention mechanisms, (3) alignment modules, and (4) unified decoders.
 
-MLLMs implement parallel modality processing requiring sophisticated fusion mechanisms: (1) modality-specific encoders, (2) cross-modal attention mechanisms, (3) alignment modules mapping features into shared representational space, and (4) unified decoders generating multimodal outputs. This enables simultaneous cross-referencing of multiple information sources.
-
-\textbf{Learning and Application Differences}
-
-Traditional LLMs use well-established single-task optimization with language modeling objectives like next-token prediction. Evaluation focuses on language-specific metrics such as perplexity and BLEU scores.
-
-MLLMs face complex multi-objective optimization, balancing learning across modalities while avoiding negative interference. Training requires curriculum learning and careful loss function balancing. Applications expand from text-centric tasks (summarization, code generation) to cross-modal capabilities (visual question answering, image captioning, multimodal dialogue systems), enabling accessibility tools, educational systems, and scientific analysis requiring integration of multiple information sources.
+Traditional LLMs use single-task optimization with established language modeling objectives. MLLMs face complex multi-objective optimization, balancing learning across modalities. Applications expand from text-centric tasks (summarization, code generation) to cross-modal capabilities (visual question answering, image captioning, multimodal dialogue systems).
 
 
 \subsection{Solution Implementation}
