--- a/Report/references.bib
+++ b/Report/references.bib
@@ -6,6 +6,15 @@
   year={2017}
 }
 
+@misc{liu2024llava15,
+  title        = {LLaVA-1.5: Towards Multi-modal GPT-4 Level Capabilities},
+  author       = {Liu, Haotian and Li, Chunyuan and Lee, Zudi and Jin, Pengchuan and Awadallah, Ahmed and Gao, Jianfeng},
+  year         = {2024},
+  howpublished = {GitHub repository},
+  url          = {https://github.com/haotian-liu/LLaVA},
+  note         = {Accessed September 29, 2025}
+}
+
 @article{raffel2020exploring,
   title={Exploring the limits of transfer learning with a unified text-to-text transformer},
   author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
