完成多模态小模型的部署

--- a/Report/5112Report_Group7.tex
+++ b/Report/5112Report_Group7.tex
@@ -508,7 +508,10 @@ Traditional LLMs employ sequential processing with linear pipeline: tokenization
 Traditional LLMs use single-task optimization with established language modeling objectives. MLLMs face complex multi-objective optimization, balancing learning across modalities. Applications expand from text-centric tasks (summarization, code generation) to cross-modal capabilities (visual question answering, image captioning, multimodal dialogue systems).
 
 
-\subsection{Group Demonstration with LLaVA-1.5-13B}
+\subsection{Deployment of the MMLLMs}
+% 记录多模态模型部署的详细过程
+
+
 
 
 
